--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+      crossorigin="anonymous"
+    />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+  <body style="height: 100vh;margin: 0;">
+    <noscript style="height: 100%;">
+      <div
+        style="display: flex;justify-content: center;align-items: center; height: 100%;width: 100%;background: blueviolet;
+        color: #f8f8ff;"
+      >
+        <p
+          style="text-align: center;font-family: monospace;font-size: 25px;padding: 15px;line-height: 140%;"
+        >
+          We're sorry but
+          <span
+            style="font-weight: bold;font-size: 30px;text-transform: uppercase;"
+            ><%= htmlWebpackPlugin.options.title %></span
+          >
+          doesn't work without JavaScript enabled. Please enable it to continue.
+        </p>
+      </div>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
